soph/site-specific.css
/*#region Possible Template Adjustments */

/*BEGIN fixes issue with breadcrumbs on full-width pages.  Remove this if it causes unwanted issues*/

body.hd #content {
    width:100%;
}

#maincolumn-wide {
    padding:0 20px;
    box-sizing:border-box;
}

/*END fixes issue with breadcrumbs on full-width pages*/

/*#endregion Possible Template Adjustments */




/*#region Mobile Images */

@media all and (max-width:500px) {
    .mobile-image-vert {
        width: 100%!important;
        margin: 0 auto;
    }
}

/*#endregion Mobile Images */


/*#region Utility Classes */

@media all and (min-width:600px) {
    .u-soph-img--float-right {
        float:right;
        margin:20px;
    }
}


    .u-soph-img--250-max {
        max-width:250px;
    }




/*#endregion Utility Classes */

/*#region Tables */

.soph-table tr:first-child {
    background-color: #1e6b52;
    color: #fff;
    font-size: 1.2em;
    padding: 35px;
}
.soph-table tr > th {
    padding: 15px;
}

/*#endregion Tables */

/*#region Middle Menu titles */

.soph-middle-menu {
    padding-left: 15px!important;
    line-height: 1.2em;
}

/*#endregion Middle Menu titles */

/*#region Directory */

.item-page .profile-heading__wrapper {
    display: none;
}

.uk-margin .profile-heading__wrapper {
    margin-top: -15px;
}

/*#endregion Directory */

/*#region Homepage Sidebar Announcement * /

.sidebar-announcement {
    border: 3px solid #80bc00;
    padding: 1.5em;
    margin-bottom: 20px;
 }

 /*#endregion Homepage Sidebar Announcement */

/*#region Homepage Heading */

.soph-home .page-header {
    display: none;
}

/*#endregion Homepage Heading */

/*#region Homepage Announcement */

.announcementText a:hover {
    color: #808285 !important;
border-bottom: 3px solid #808285 !important;
}

/*#endregion Homepage Announcement */

/*#region Footer Menu */

#footer .footer-menu a {
    font-size: 16px !important;
}

.footer-menu {
    background-color: #EEEEEE;
    padding: 10px !important;
    text-align: center;
}

.footer-menu ul.nav {
    margin: 0px auto;
    width: 100%;
    padding-bottom: 10px;
}

#footer .footer-menu ul.nav li {
    display: inline-block !important;
    padding: 0px 20px;
    border-left: 1px solid #fff;
}

#footer .footer-menu ul.nav li:first-child {
    border-left: 0px;
}

#footer .footer-menu a:link,
#footer .footer-menu a:visited {
    color: #444;
    font-weight: bold;
}

#footer .footer-menu a:hover,
#footer .footer-menu a:focus {
    color: #1E6B52 !important;
}

@media all and (max-width: 575px) {

    .footer-menu .nav.menu.mod-list {
     display: flex;
     flex-direction: column;
   }

   .footer-menu .nav.menu.mod-list div:nth-child(n+1) {
     border: transparent;
   }
   
   }   

/*#endregion Footer Menu */

/*#region Homepage Icons */

.hp-icons-wrapper {
    display: flex;
    justify-content: space-between;
}

.hp-icons-item {
    padding: 20px;
}

.hp-icons-item > a img {
    max-height: 200px;
    width: auto;
}

.hp-icons-item > a img:hover {
    transform: scale(1.05);
}

.hp-icons-item h2 {
    text-align: center;
    color: #1e6b52;
    font-family: proxima-nova,sans-serif !important;
}

.hp-icons-item a:hover {
    text-decoration: none;
}

@media all and (max-width: 625px) {
    .hp-icons-wrapper {
        flex-direction: column;
    }
}

/*#endregion Homepage Icons */

/*#region Home Facts Slideset */

.home-facts-slideset {
    margin-top: 40px;
}

.home-facts-slideset .uk-panel {
    padding: 30px 30px;
    box-sizing: border-box;
    min-height: 375px;
}

.home-facts-slideset .uk-margin {
    height: 100%;
    box-sizing: border-box;
}

.home-facts-slideset li:nth-child(odd) .uk-panel {
    background-color: #DEE7BC ;
    color: #fff;
}

.home-facts-slideset li:nth-child(odd) .home-facts-slideset__copy-container {
      border-top: 2px solid #006241;
    border-bottom: 2px solid #006241;
}

.home-facts-slideset li:nth-child(even) .uk-panel {
    background-color: #006241 ;
    color: #fff;
}

.home-facts-slideset li:nth-child(even) .home-facts-slideset__copy {
    color: #fff;
}

.home-facts-slideset li:nth-child(even) .home-facts-slideset__copy-container {
    border-top: 2px solid #fff;
    border-bottom: 2px solid #fff;
}

.home-facts-slideset__copy-container {
    height: 100%;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
}

.home-facts-slideset__copy {
    padding: 10px 10px;
    font-size: 1.5em !important;
}

.home-facts-slideset .uk-panel a {
    border-bottom: none !important;
  }
  
  .home-facts-slideset .uk-margin {
      margin-top: 0!important;
  }
  
  .home-facts-slideset .uk-panel a:hover {
    background-color: transparent !important;
  }

/*#endregion Home Facts Slideset */

/*#region Back to Top */

a.back-to-top {
    border: 2px solid #ccc;
    bottom: 5%;
    color: #787878;
    font-family: "din-condensed","din-condensed-web",sans-serif!important;
    font-size: 16px;
    font-weight: normal !important;
    left: auto;
    opacity: 0.7;
    padding: 0.5em 0.7em 0.4em;
    right: 0;
    text-transform: uppercase;
 }
 
 a.back-to-top:hover {
     background-color: rgba(235, 235, 235, 0.8);
 }
 
 @media screen and (max-width: 1024px) {
     a.back-to-top {
         background-color: rgba(235, 235, 235, 0.8);
         bottom: 0;
         display: none;
         font-size: 12px;
         position: fixed;
         right: 0;
         text-decoration: none;
     }
 }

 /*#endregion Back to Top */

/*#region Smaller Font on Grid Widgets */
@media all and (min-width: 768px) {
    .template-01 .smaller-font-grid .uk-margin-small h2 {
        font-size: 1.1rem;
    }    
    }

/*#endregion Smaller Font on Grid Widgets */

/*#region Faculty Research Spotlight */

.soph-faulty-research-spotlight__page .item {
    display:flex;
    flex-wrap:wrap;
    border:1px solid #1E6B52;

}

.soph-faulty-research-spotlight__page .item-image {
    flex-basis:calc(50% - 10px);
    order:1;
    margin:0;

}
/* ... */

